html base structure

--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,12 @@ body {
   background-color: #fefefe;
 }
 
+#page {
+  background-color: #DDD;
+  width: 50%;
+  text-align: center;
+  display: block;
+  margin: auto;
+}
+
 /*# sourceMappingURL=style.css.map */
