--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,10 @@
 body {
     background-color: #fefefe;
 }
+#page {
+    background-color: #DDD;
+    width: 50%;
+    text-align: center;
+    display: block;
+    margin: auto;
+}
