--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,15 +4,28 @@
 
 body {
     background-color: #fefefe;
-}
-#page {
-    background-color: #DDD;
-    width: 50%;
-    text-align: center;
-    display: block;
-    margin: auto;
-}
-#hBonus {
-    position: fixed;
-    display: none;
+    #page{
+        background-color: #DDD;
+        width: 50%;
+        text-align: center;    
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin:auto;
+        #main{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: middle;
+        }
+        #supplement{
+            display:flex;
+            align-items: center;
+            justify-content: space-around;
+            #hBonus {
+                display: none;
+            }
+        }
+    }
 }
