--- a/css/style.css
+++ b/css/style.css
@@ -6,28 +6,33 @@
 body {
   background-color: #fefefe;
 }
-body #page {
+
+#page {
+  margin: auto;
+  max-width: 1200px;
+  min-width: 300px;
+  width: 95%;
   background-color: #DDD;
-  width: 50%;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  margin: auto;
 }
-body #page #main {
+
+#main {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: middle;
 }
-body #page #supplement {
+
+#supplement {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
-body #page #supplement #hBonus {
+#supplement #hBonus {
   display: inline-block;
 }
 
