--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,5 @@
-* {
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
+@import 'reset.scss';
+@import 'plank.scss';
 
 html {
     min-height: 100%;
@@ -14,37 +12,65 @@ body {
 }
     
 #page{
-    position: relative;
-    top: 40vh;
-    margin: auto;
-    max-width: 600px;
-    min-width: 300px;
-    width: 95%;
-    background-color: #DDD;
-    text-align: center;    
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-        
-#main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: middle;
-}
-        
-#supplement{
-    display:flex;
-    align-items: center;
-    justify-content: space-around;
-    #hBonus {
-        display: inline-block;
+    margin-top : 10vh;
+    display:grid;
+    grid-template-columns: 10% 20% 10% 20% 10% 20% 10%;
+    .leftColumn{
+        display: flex;
+        flex-direction:column;
+        grid-column : 2 / span 1;
+        .infos{
+            .infoTxt{
+                position : absolute;
+                top : 20%;
+                width : 20%;
+                z-index : 4;
+                text-align: center;
+                vertical-align: middle;
+                color : yellow;
+            }
+        }
+        .mult{
+            .multTxt{
+                position : absolute;
+                top : 60%;
+                width : 20%;
+                z-index : 4;
+                text-align: center;
+                vertical-align: middle;
+            }
+        }
+    }
+    .centralColumn{
+        display: flex;
+        flex-direction:column;
+        justify-content: space-around;
+        grid-column : 4 / span 1;
+        h1{
+            color : yellow;
+        }
+    }
+    .rightColumn{
+        display: flex;
+        flex-direction:column;
+        grid-column : 6 / span 1;
+        .autoplank{
+            .autoTxt{
+                position : absolute;;
+                top : 50%;
+                width : 20%;
+                z-index : 4;
+                text-align: center;
+                vertical-align: middle;
+            }
+        }
     }
 }
 
 // leaf background
+.leaf{
+    z-index : 10
+}
 .leafLeft {
     position: absolute;
     top: 0;
