--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ table {
 
 .small {
   width: 100%;
-  height: 300px;
+  height: 250px;
 }
 
 html {
@@ -168,7 +168,6 @@ body {
 }
 
 #page {
-  margin-top: 10vh;
   display: grid;
   grid-template-columns: 10% 20% 10% 20% 10% 20% 10%;
 }
@@ -188,7 +187,7 @@ body {
 }
 #page .leftColumn .mult .multTxt {
   position: absolute;
-  top: 60%;
+  top: 70%;
   width: 20%;
   z-index: 4;
   text-align: center;
@@ -215,6 +214,12 @@ body {
   z-index: 4;
   text-align: center;
   vertical-align: middle;
+}
+
+.rope {
+  height: 12vh;
+  width: 100%;
+  background-image: repeating-linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 32%, #7e653f 32%, #7e653f 34%, rgba(0, 0, 0, 0) 34%, rgba(0, 0, 0, 0) 65%, #7e653f 65%, #7e653f 67%, rgba(0, 0, 0, 0) 67%, rgba(0, 0, 0, 0) 100%);
 }
 
 .leaf {
