--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,6 @@ body {
 }
     
 #page{
-    margin-top : 10vh;
     display:grid;
     grid-template-columns: 10% 20% 10% 20% 10% 20% 10%;
     .leftColumn{
@@ -33,7 +32,7 @@ body {
         .mult{
             .multTxt{
                 position : absolute;
-                top : 60%;
+                top : 70%;
                 width : 20%;
                 z-index : 4;
                 text-align: center;
@@ -65,6 +64,12 @@ body {
             }
         }
     }
+}
+
+.rope{
+    height : 12vh;
+    width : 100%;
+    background-image: repeating-linear-gradient(90deg,rgba(0,0,0,0)0%, rgba(0,0,0,0)32%,rgb(126, 101, 63)32%,rgb(126, 101, 63)34%,rgba(0,0,0,0)34%,rgba(0,0,0,0)65%,rgb(126, 101, 63)65%,rgb(126, 101, 63)67%,rgba(0,0,0,0)67%,rgba(0,0,0,0)100%);
 }
 
 // leaf background
