wip leaf bckgnd

--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,22 @@ body {
   display: inline-block;
 }
 
-.leafLeft {
+.leafLeftTop {
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: 0;
+  top: 6%;
+  left: -6%;
+  z-index: 10;
+}
+
+.leafLeftBot {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0%;
   left: -2%;
+  z-index: 9;
 }
 
 .leafTop {
@@ -85,6 +95,7 @@ body {
 
 .shapeLeaf {
   border-radius: 5px 250px 3px 300px;
+  border: 1px solid #2c2836;
   width: 150px;
   height: 150px;
 }
