--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,5 @@
-* {
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
+@import 'reset.scss';
+@import 'plank.scss';
 
 html {
     min-height: 100%;
@@ -14,52 +12,76 @@ body {
 }
     
 #page{
-    position: relative;
-    top: 40vh;
-    margin: auto;
-    max-width: 600px;
-    min-width: 300px;
-    width: 95%;
-    background-color: #DDD;
-    text-align: center;    
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-        
-#main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: middle;
-}
-        
-#supplement{
-    display:flex;
-    align-items: center;
-    justify-content: space-around;
-    #hBonus {
-        display: inline-block;
+    display:grid;
+    grid-template-columns: 10% 20% 10% 20% 10% 20% 10%;
+    .leftColumn{
+        display: flex;
+        flex-direction:column;
+        grid-column : 2 / span 1;
+        .infos{
+            .infoTxt{
+                position : absolute;
+                top : 20%;
+                width : 20%;
+                z-index : 4;
+                text-align: center;
+                vertical-align: middle;
+                color : yellow;
+            }
+        }
+        .mult{
+            .multTxt{
+                position : absolute;
+                top : 70%;
+                width : 20%;
+                z-index : 4;
+                text-align: center;
+                vertical-align: middle;
+            }
+        }
+    }
+    .centralColumn{
+        display: flex;
+        flex-direction:column;
+        justify-content: space-around;
+        grid-column : 4 / span 1;
+        h1{
+            color : yellow;
+        }
+    }
+    .rightColumn{
+        display: flex;
+        flex-direction:column;
+        grid-column : 6 / span 1;
+        .autoplank{
+            .autoTxt{
+                position : absolute;;
+                top : 50%;
+                width : 20%;
+                z-index : 4;
+                text-align: center;
+                vertical-align: middle;
+            }
+        }
     }
 }
 
-// leaf background
-.leafLeftTop {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    top: 6%;
-    left: -6%;
-    z-index: 10;
+.rope{
+    height : 12vh;
+    width : 100%;
+    background-image: repeating-linear-gradient(90deg,rgba(0,0,0,0)0%, rgba(0,0,0,0)32%,rgb(126, 101, 63)32%,rgb(126, 101, 63)34%,rgba(0,0,0,0)34%,rgba(0,0,0,0)65%,rgb(126, 101, 63)65%,rgb(126, 101, 63)67%,rgba(0,0,0,0)67%,rgba(0,0,0,0)100%);
 }
-.leafLeftBot {
+
+// leaf background
+.leaf{
+    z-index : 10
+}
+.leafLeft {
     position: absolute;
     display: flex;
     flex-direction: column;
-    top: 0%;
+    top: 0;
     left: -2%;
-    z-index: 9;
 }
 
 .leafTop {
@@ -95,7 +117,6 @@ body {
 
 .shapeLeaf {
     border-radius: 5px 250px 3px 300px;
-    border: 1px solid rgb(44,40,54);
     width: 150px;
     height: 150px;
     .line {
