--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,25 @@ body {
   text-align: center;
   vertical-align: middle;
 }
+#page .rightColumn {
+  display: flex;
+  flex-direction: column;
+  grid-column: 6/span 1;
+}
+#page .rightColumn .autoplank .autoTxt {
+  position: absolute;
+  top: 50%;
+  width: 20%;
+  z-index: 4;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.rope {
+  height: 12vh;
+  width: 100%;
+  background-image: repeating-linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 32%, #7e653f 32%, #7e653f 34%, rgba(0, 0, 0, 0) 34%, rgba(0, 0, 0, 0) 65%, #7e653f 65%, #7e653f 67%, rgba(0, 0, 0, 0) 67%, rgba(0, 0, 0, 0) 100%);
+}
 
 .rope {
   height: 12vh;
@@ -226,22 +245,12 @@ body {
   z-index: 10;
 }
 
-.leafLeftTop {
+.leafLeft {
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: 6%;
-  left: -6%;
-  z-index: 10;
-}
-
-.leafLeftBot {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  top: 0%;
+  top: 0;
   left: -2%;
-  z-index: 9;
 }
 
 .leafTop {
@@ -277,7 +286,6 @@ body {
 
 .shapeLeaf {
   border-radius: 5px 250px 3px 300px;
-  border: 1px solid #2c2836;
   width: 150px;
   height: 150px;
 }
