--- a/css/style.css
+++ b/css/style.css
@@ -242,12 +242,22 @@ body {
   background-image: repeating-linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 32%, #7e653f 32%, #7e653f 34%, rgba(0, 0, 0, 0) 34%, rgba(0, 0, 0, 0) 65%, #7e653f 65%, #7e653f 67%, rgba(0, 0, 0, 0) 67%, rgba(0, 0, 0, 0) 100%);
 }
 
-.leafLeft {
+.leafLeftBot {
   position: absolute;
   display: flex;
   flex-direction: column;
   top: 0;
   left: -2%;
+  z-index: 9;
+}
+
+.leafLeftTop {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 6%;
+  left: -6%;
+  z-index: 10;
 }
 
 .leafTop {
