--- a/css/style.css
+++ b/css/style.css
@@ -216,28 +216,41 @@ body {
   text-align: center;
   vertical-align: middle;
 }
-#page .rightColumn {
-  display: flex;
-  flex-direction: column;
-  grid-column: 6/span 1;
+
+.reset {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 170px;
+  height: 50px;
+  z-index: 25;
+  cursor: pointer;
 }
-#page .rightColumn .autoplank .autoTxt {
+.reset .plankReset {
+  width: 150px;
+  height: 30px;
+  z-index: 40;
+  background-color: #211600;
+  overflow: hidden;
+  transform: rotate(-2deg) translate(3%, -5%);
+  background: linear-gradient(0deg, rgba(238, 196, 135, 0.5) 0%, rgba(243, 207, 154, 0.5) 3%, rgba(248, 216, 162, 0.5) 6%, rgba(243, 207, 154, 0.5) 6%, rgba(243, 207, 154, 0.5) 9%, rgba(241, 202, 136, 0.5) 12%, rgba(243, 207, 154, 0.5) 15%, rgba(244, 208, 158, 0.5) 17%, rgba(243, 207, 154, 0.5) 19%, rgba(243, 207, 154, 0.5) 21%, rgba(250, 221, 176, 0.5) 23%, rgba(250, 221, 176, 0.5) 25%, rgba(243, 207, 154, 0.5) 27%, rgba(238, 200, 138, 0.5) 29%, rgba(243, 207, 154, 0.5) 29%, rgba(243, 207, 154, 0.5) 32%, rgba(243, 207, 154, 0.5) 34%, rgba(243, 207, 154, 0.5) 37%, rgba(250, 221, 176, 0.5) 40%, rgba(250, 221, 176, 0.5) 43%, rgba(243, 207, 154, 0.5) 43%, rgba(243, 207, 154, 0.5) 44%, rgba(243, 207, 154, 0.5) 47%, rgba(238, 200, 138, 0.5) 49%, rgba(243, 207, 154, 0.5) 52%, rgba(250, 221, 176, 0.5) 54%, rgba(244, 208, 158, 0.5) 56%, rgba(243, 207, 154, 0.5) 59%, rgba(244, 208, 158, 0.5) 61%, rgba(250, 221, 176, 0.5) 64%, rgba(243, 207, 154, 0.5) 64%, rgba(244, 208, 158, 0.5) 66%, rgba(243, 207, 154, 0.5) 69%, rgba(248, 216, 162, 0.5) 71%, rgba(243, 207, 154, 0.5) 74%, rgba(243, 207, 154, 0.5) 76%, rgba(243, 207, 154, 0.5) 77%, rgba(243, 207, 154, 0.5) 80%, rgba(250, 221, 176, 0.5) 81%, rgba(243, 207, 154, 0.5) 83%, rgba(250, 221, 176, 0.5) 83%, rgba(250, 221, 176, 0.5) 85%, rgba(243, 207, 154, 0.5) 87%, rgba(250, 221, 176, 0.5) 89%, rgba(250, 221, 176, 0.5) 91%, rgba(243, 207, 154, 0.5) 92%, rgba(248, 216, 162, 0.5) 96%, rgba(243, 207, 154, 0.5) 97%, rgba(243, 207, 154, 0.5) 97%, rgba(243, 207, 154, 0.5) 98%, rgba(243, 207, 154, 0.5) 100%), linear-gradient(180deg, rgba(238, 196, 135, 0.3) 0%, rgba(243, 207, 154, 0.3) 3%, rgba(248, 216, 162, 0.3) 6%, rgba(243, 207, 154, 0.3) 6%, rgba(243, 207, 154, 0.3) 9%, rgba(241, 202, 136, 0.3) 12%, rgba(243, 207, 154, 0.3) 15%, rgba(244, 208, 158, 0.3) 17%, rgba(243, 207, 154, 0.3) 19%, rgba(243, 207, 154, 0.3) 21%, rgba(250, 221, 176, 0.3) 23%, rgba(250, 221, 176, 0.3) 25%, rgba(243, 207, 154, 0.3) 27%, rgba(238, 200, 138, 0.3) 29%, rgba(243, 207, 154, 0.3) 29%, rgba(243, 207, 154, 0.3) 32%, rgba(243, 207, 154, 0.3) 34%, rgba(243, 207, 154, 0.3) 37%, rgba(250, 221, 176, 0.3) 40%, rgba(250, 221, 176, 0.3) 43%, rgba(243, 207, 154, 0.3) 43%, rgba(243, 207, 154, 0.3) 44%, rgba(243, 207, 154, 0.3) 47%, rgba(238, 200, 138, 0.3) 49%, rgba(243, 207, 154, 0.3) 52%, rgba(250, 221, 176, 0.3) 54%, rgba(244, 208, 158, 0.3) 56%, rgba(243, 207, 154, 0.3) 59%, rgba(244, 208, 158, 0.3) 61%, rgba(250, 221, 176, 0.3) 64%, rgba(243, 207, 154, 0.3) 64%, rgba(244, 208, 158, 0.3) 66%, rgba(243, 207, 154, 0.3) 69%, rgba(248, 216, 162, 0.3) 71%, rgba(243, 207, 154, 0.3) 74%, rgba(243, 207, 154, 0.3) 76%, rgba(243, 207, 154, 0.3) 77%, rgba(243, 207, 154, 0.3) 80%, rgba(250, 221, 176, 0.3) 81%, rgba(243, 207, 154, 0.3) 83%, rgba(250, 221, 176, 0.3) 83%, rgba(250, 221, 176, 0.3) 85%, rgba(243, 207, 154, 0.3) 87%, rgba(250, 221, 176, 0.3) 89%, rgba(250, 221, 176, 0.3) 91%, rgba(243, 207, 154, 0.3) 92%, rgba(248, 216, 162, 0.3) 96%, rgba(243, 207, 154, 0.3) 97%, rgba(243, 207, 154, 0.3) 97%, rgba(243, 207, 154, 0.3) 98%, rgba(243, 207, 154, 0.3) 100%), linear-gradient(0deg, rgba(238, 196, 135, 0.3) 0%, rgba(243, 207, 154, 0.3) 3%, rgba(238, 200, 138, 0.3) 49%, rgba(243, 207, 154, 0.3) 52%, rgba(250, 221, 176, 0.3) 54%, rgba(244, 208, 158, 0.3) 56%, rgba(243, 207, 154, 0.2) 59%, rgba(244, 208, 158, 0.3) 61%, rgba(250, 221, 176, 0.3) 64%, rgba(243, 207, 154, 0.3) 64%, rgba(244, 208, 158, 0.3) 66%, rgba(243, 207, 154, 0.3) 69%, rgba(248, 216, 162, 0.3) 71%, rgba(243, 207, 154, 0.3) 74%, rgba(243, 207, 154, 0.3) 76%, rgba(243, 207, 154, 0.3) 77%, rgba(243, 207, 154, 0.3) 80%, rgba(250, 221, 176, 0.3) 81%, rgba(243, 207, 154, 0.3) 83%, rgba(250, 221, 176, 0.3) 83%, rgba(250, 221, 176, 0.3) 85%, rgba(243, 207, 154, 0.3) 87%, rgba(250, 221, 176, 0.3) 89%, rgba(250, 221, 176, 0.3) 91%, rgba(243, 207, 154, 0.3) 92%, rgba(248, 216, 162, 0.3) 96%, rgba(243, 207, 154, 0.3) 97%, rgba(243, 207, 154, 0.3) 97%, rgba(243, 207, 154, 0.3) 98%, rgba(243, 207, 154, 0.3) 100%);
+  background-size: 10% 70%, 80% 80%, 100% 10%;
+  background-position: 50% 50%, 70% 70%, 30% 30%;
+  background-color: #211600;
+  z-index: 2;
+  filter: brightness(0.3) hue-rotate(-12deg) saturate(1.4);
+}
+.reset #hReset {
   position: absolute;
-  top: 50%;
-  width: 20%;
-  z-index: 4;
-  text-align: center;
-  vertical-align: middle;
+  top: 20px;
+  left: 20px;
+  z-index: 41;
+  transform: rotate(-2deg) translate(8%, -3%);
+  color: yellow;
 }
 
 .rope {
-  height: 12vh;
-  width: 100%;
-  background-image: repeating-linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 32%, #7e653f 32%, #7e653f 34%, rgba(0, 0, 0, 0) 34%, rgba(0, 0, 0, 0) 65%, #7e653f 65%, #7e653f 67%, rgba(0, 0, 0, 0) 67%, rgba(0, 0, 0, 0) 100%);
-}
-
-.rope {
-  height: 12vh;
+  height: 2vh;
   width: 100%;
   background-image: repeating-linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 32%, #7e653f 32%, #7e653f 34%, rgba(0, 0, 0, 0) 34%, rgba(0, 0, 0, 0) 65%, #7e653f 65%, #7e653f 67%, rgba(0, 0, 0, 0) 67%, rgba(0, 0, 0, 0) 100%);
 }
@@ -380,7 +393,7 @@ body {
 /* Police d'écriture */
 @font-face {
   font-family: "waltographUI";
-  src: url("../font/waltographUI.ttf") format("truetype");
+  src: url("../public/fonts/waltographUI.ttf") format("truetype");
 }
 h1 {
   z-index: 25;
