--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
 @import 'reset.scss';
 @import 'plank.scss';
-
 html {
     min-height: 100%;
 }
@@ -64,31 +63,41 @@ body {
             }
         }
     }
-    .rightColumn{
-        display: flex;
-        flex-direction:column;
-        grid-column : 6 / span 1;
-        .autoplank{
-            .autoTxt{
-                position : absolute;;
-                top : 50%;
-                width : 20%;
-                z-index : 4;
-                text-align: center;
-                vertical-align: middle;
-            }
-        }
+}
+.reset{
+    position : fixed;
+    top:0;
+    right:0;
+    width : 170px;
+    height : 50px;
+    z-index : 25;
+    cursor: pointer;
+    .plankReset{
+        width : 150px;
+        height : 30px;
+        z-index : 40;
+        background-color:rgba(33, 22, 0, 1);
+        overflow:hidden;
+        transform : rotate(-2deg) translate(3%, -5%);
+        @include plank();
+        background-color:rgba(33, 22, 0, 1);
+        z-index: 2;
+        filter : brightness(0.3) hue-rotate(-12deg) saturate(1.4)
+    }
+    #hReset{
+        position : absolute;
+        top : 20px;
+        left : 20px;
+        z-index : 41;
+        transform : rotate(-2deg) translate(8%, -3%);
+        color : yellow;
+
+
     }
 }
 
 .rope{
-    height : 12vh;
-    width : 100%;
-    background-image: repeating-linear-gradient(90deg,rgba(0,0,0,0)0%, rgba(0,0,0,0)32%,rgb(126, 101, 63)32%,rgb(126, 101, 63)34%,rgba(0,0,0,0)34%,rgba(0,0,0,0)65%,rgb(126, 101, 63)65%,rgb(126, 101, 63)67%,rgba(0,0,0,0)67%,rgba(0,0,0,0)100%);
-}
-
-.rope{
-    height : 12vh;
+    height : 2vh;
     width : 100%;
     background-image: repeating-linear-gradient(90deg,rgba(0,0,0,0)0%, rgba(0,0,0,0)32%,rgb(126, 101, 63)32%,rgb(126, 101, 63)34%,rgba(0,0,0,0)34%,rgba(0,0,0,0)65%,rgb(126, 101, 63)65%,rgb(126, 101, 63)67%,rgba(0,0,0,0)67%,rgba(0,0,0,0)100%);
 }
@@ -231,9 +240,8 @@ body {
 /* Police d'écriture */
 @font-face {
         font-family: "waltographUI";
-        src: url("../font/waltographUI.ttf") format("truetype");
+        src: url("../public/fonts/waltographUI.ttf") format("truetype");
     }
-
     h1 {
         z-index : 25;
         text-align: center;
