--- a/css/style.css
+++ b/css/style.css
@@ -164,9 +164,9 @@ table {
   background-color: transparent;
   box-shadow: -1.1em 1.1em 0 0 #fcd110;
   border-radius: 50%;
-  position: absolute;
+  position: relative;
   top: -0.9em;
-  left: 1.6em;
+  left: 6.6em;
 }
 
 .banana:before {
@@ -176,9 +176,9 @@ table {
   transform: rotate(45deg);
   background-color: #937714;
   position: absolute;
-  top: 5.4em;
-  left: 4.3em;
-  z-index: 1;
+  top: 5.3em;
+  left: 4.4em;
+  z-index: 10;
 }
 
 .banana:after {
@@ -190,7 +190,7 @@ table {
   position: absolute;
   top: 1.1em;
   left: 0.2em;
-  z-index: 1;
+  z-index: 10;
 }
 
 .banana-line {
@@ -199,9 +199,9 @@ table {
   background-color: transparent;
   box-shadow: -0.4em 0.4em 0 0 #ffe23c;
   border-radius: 50%;
-  position: absolute;
-  top: -0.7em;
-  left: 1.7em;
+  position: relative;
+  top: -6.7em;
+  left: 6.7em;
   transform: rotate(-4deg);
 }
 
