--- a/css/style.css
+++ b/css/style.css
@@ -336,17 +336,29 @@ body {
 }
 .reset #hReset {
   position: absolute;
-  top: 20px;
+  top: 35px;
   left: 20px;
   z-index: 41;
-  transform: rotate(-2deg) translate(8%, -3%);
+  transform: rotate(-2deg) translate(8%, -5%);
   color: yellow;
 }
 
 .rope {
-  height: 2vh;
-  width: 100%;
-  background-image: repeating-linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 32%, #7e653f 32%, #7e653f 34%, rgba(0, 0, 0, 0) 34%, rgba(0, 0, 0, 0) 65%, #7e653f 65%, #7e653f 67%, rgba(0, 0, 0, 0) 67%, rgba(0, 0, 0, 0) 100%);
+  height: 4vh;
+  display: flex;
+  justify-content: space-around;
+}
+
+.leftRope {
+  height: 4vh;
+  width: 3px;
+  background-image: repeating-linear-gradient(-40deg, black 0%, black 5%, #523106 10%, #a05b0d 20%);
+}
+
+.rightRope {
+  height: 4vh;
+  width: 3px;
+  background-image: repeating-linear-gradient(-40deg, black 0%, black 5%, #523106 10%, #9c590c 20%);
 }
 
 .leafLeftBot {
