--- a/scss/style.scss
+++ b/scss/style.scss
@@ -89,10 +89,10 @@ body {
     }
     #hReset{
         position : absolute;
-        top : 20px;
+        top : 35px;
         left : 20px;
         z-index : 41;
-        transform : rotate(-2deg) translate(8%, -3%);
+        transform : rotate(-2deg) translate(8%, -5%);
         color : yellow;
 
 
@@ -100,11 +100,20 @@ body {
 }
 
 .rope{
-    height : 2vh;
-    width : 100%;
-    background-image: repeating-linear-gradient(90deg,rgba(0,0,0,0)0%, rgba(0,0,0,0)32%,rgb(126, 101, 63)32%,rgb(126, 101, 63)34%,rgba(0,0,0,0)34%,rgba(0,0,0,0)65%,rgb(126, 101, 63)65%,rgb(126, 101, 63)67%,rgba(0,0,0,0)67%,rgba(0,0,0,0)100%);
+    height : 4vh;
+    display : flex;
+    justify-content: space-around;
 }
-
+.leftRope {
+    height : 4vh;
+    width :3px;
+    background-image: repeating-linear-gradient(-40deg,black 0%,black 5%,rgb(82, 49, 6)10%,rgb(160, 91, 13)20%)
+}
+.rightRope{
+    height : 4vh;
+    width : 3px;
+    background-image: repeating-linear-gradient(-40deg,black 0%,black 5%,rgb(82, 49, 6)10%,rgb(156, 89, 12)20%)
+}
 // leaf background
 .leafLeftBot {
     position: absolute;
