--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,6 +75,9 @@ body {
     height : 50px;
     z-index : 25;
     cursor: pointer;
+    .rope{
+        height : 4vh;
+    }
     .plankReset{
         width : 150px;
         height : 30px;
@@ -100,19 +103,19 @@ body {
 }
 
 .rope{
-    height : 4vh;
+    height : 8vh;
     display : flex;
     justify-content: space-around;
 }
 .leftRope {
-    height : 4vh;
+    height : 8vh;
     width :3px;
-    background-image: repeating-linear-gradient(-40deg,black 0%,black 5%,rgb(82, 49, 6)10%,rgb(160, 91, 13)20%)
+    background-image: repeating-linear-gradient(-40deg,black 0%,black 5%,rgb(82, 49, 6)5%,rgb(160, 91, 13)10%)
 }
 .rightRope{
-    height : 4vh;
+    height : 8vh;
     width : 3px;
-    background-image: repeating-linear-gradient(-40deg,black 0%,black 5%,rgb(82, 49, 6)10%,rgb(156, 89, 12)20%)
+    background-image: repeating-linear-gradient(-40deg,black 0%,black 5%,rgb(82, 49, 6)5%,rgb(156, 89, 12)10%)
 }
 // leaf background
 .leafLeftBot {
