--- a/scss/_banana.scss
+++ b/scss/_banana.scss
@@ -7,6 +7,7 @@
     position: relative;
     top: -0.9em;
     left: 6.6em;
+    transform: scale(2);
   }
   
 .banana:before {
@@ -16,8 +17,8 @@ height: 0.3em;
 transform: rotate(45deg);
 background-color: #937714;
 position: absolute;
-top: 5.3em;
-left: 4.4em;
+top: 5.1em;
+left: 4.5em;
 z-index:10;
 }
 
@@ -40,7 +41,7 @@ background-color: transparent;
 box-shadow: -0.4em 0.4em 0 0 #ffe23c;
 border-radius: 50%;
 position: relative;
-top: -6.7em;
-left: 6.7em;
-transform: rotate(-4deg);
+top: -6.4em;
+left: 6.5em;
+transform: scale(2) rotate(-4deg);
 }
