--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,147 @@ table {
   transform: rotate(-4deg);
 }
 
+.monkey {
+  position: relative;
+  margin: auto;
+  display: block;
+  width: 125px;
+  height: 125px;
+  margin-top: 5%;
+}
+
+.head {
+  position: absolute;
+  width: 95px;
+  height: 100px;
+  border-radius: 100%;
+  background: #9b7b53;
+  z-index: 100;
+  top: 10%;
+  left: 10%;
+}
+
+.earLeft {
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  border-radius: 100%;
+  background: #9b7b53;
+  z-index: 98;
+  top: 33%;
+}
+
+.earRight {
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  border-radius: 100%;
+  background: #9b7b53;
+  z-index: 98;
+  top: 33%;
+  left: 69%;
+}
+
+.innerEarLeft {
+  position: absolute;
+  width: 27.5px;
+  height: 27.5px;
+  border-radius: 100%;
+  z-index: 99;
+  background: #fff6e0;
+  top: 10%;
+  left: 5%;
+}
+
+.innerEarRight {
+  position: absolute;
+  width: 27.5px;
+  height: 27.5px;
+  border-radius: 100%;
+  z-index: 99;
+  background: #fff6e0;
+  top: 10%;
+  left: 15%;
+}
+
+.lowerWhite {
+  position: absolute;
+  width: 85px;
+  height: 60px;
+  border-radius: 50%;
+  z-index: 101;
+  background: #fff6e0;
+  top: 42%;
+  left: 14%;
+}
+
+.upperWhite {
+  position: absolute;
+  width: 70px;
+  height: 75px;
+  border-radius: 100%;
+  z-index: 101;
+  background: #fff6e0;
+  top: 25%;
+  left: 20%;
+}
+
+.eyeLeft {
+  position: absolute;
+  width: 7.5px;
+  height: 7.5px;
+  border-radius: 100%;
+  z-index: 102;
+  background: #543f22;
+  top: 30%;
+  left: 20%;
+}
+
+.eyeRight {
+  position: absolute;
+  width: 7.5px;
+  height: 7.5px;
+  border-radius: 100%;
+  z-index: 102;
+  background: #543f22;
+  top: 30%;
+  left: 70%;
+}
+
+.noseLeft {
+  position: absolute;
+  width: 7.5px;
+  height: 1px;
+  border-radius: 100%;
+  z-index: 102;
+  background: #543f22;
+  top: 55%;
+  left: 38%;
+}
+
+.noseRight {
+  position: absolute;
+  width: 7.5px;
+  height: 1px;
+  border-radius: 100%;
+  z-index: 102;
+  background: #543f22;
+  top: 55%;
+  left: 52%;
+}
+
+.mouth {
+  position: absolute;
+  width: 45px;
+  height: 15px;
+  z-index: 102;
+  top: 65%;
+  left: 17%;
+  border: solid 2px #543f22;
+  border-color: transparent transparent #543f22 transparent;
+  border-radius: 100%;
+}
+
 html {
   min-height: 100%;
 }
@@ -302,13 +443,19 @@ body {
   flex-direction: column;
   grid-column: 6/span 1;
 }
-#page .rightColumn .autoplank .autoTxt {
-  position: absolute;
-  top: 50%;
-  width: 20%;
+#page .rightColumn .autoplank .auto1Txt {
+  position: relative;
+  top: -550px;
+  display: flex;
+  flex-direction: column;
   z-index: 4;
   text-align: center;
-  vertical-align: middle;
+  justify-content: space-around;
+  cursor: pointer;
+}
+#page .rightColumn .autoplank .auto1Txt #hAutoclick {
+  margin-top: 2vh;
+  color: yellow;
 }
 
 .reset {
@@ -362,6 +509,10 @@ body {
   height: 8vh;
   width: 3px;
   background-image: repeating-linear-gradient(-40deg, black 0%, black 5%, #523106 5%, #9c590c 10%);
+}
+
+.grayOut {
+  filter: grayscale(1);
 }
 
 .leafLeftBot {
