--- a/scss/_bananaMult.scss
+++ b/scss/_bananaMult.scss
@@ -4,9 +4,9 @@
     background-color: transparent;
     box-shadow: -1.1em 1.1em 0 0 #fcd110;
     border-radius: 50%;
-    position: absolute;
-    top:50%;
-    left:20%;
+    position: relative;
+    top:-0.9em;
+    left:1.6em;
   }
   
 .bananaMult:before {
@@ -39,8 +39,8 @@ height: 5.8em;
 background-color: transparent;
 box-shadow: -0.4em 0.4em 0 0 #ffe23c;
 border-radius: 50%;
-position: absolute;
-top:-0.7em;
+position: relative;
+top:-6.7em;
 left:1.7em;
 transform: rotate(-4deg);
 }
