--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,34 @@ body {
                 text-align: center;
                 vertical-align: middle;
             }
+            #bananaGrappe{
+                position: absolute;
+                width: 8%;
+                height: 11%;
+                top: 55%;
+                left: 16%;
+                .multBanana3{
+                    position: absolute;
+                    top: 2%;
+                    left: 21%;
+                    z-index: 4;
+                    transform: rotate(10deg);
+                }
+                .multBanana2{
+                    position: absolute;
+                    top: -4%;
+                    left: 0%;
+                    z-index: 4;
+                    transform: rotate(30deg);
+                }
+                .multBanana1{
+                    position: absolute;
+                    top: -10%;
+                    left: -18%;
+                    z-index: 4;
+                    transform: rotate(45deg);
+                }
+            }
         }
     }
     .centralColumn{
