--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,11 @@ body {
     overflow: hidden;
 }
     
+.hoverable{
+    &:hover{
+        transform:scale(1.1);
+    }
+}
 #page{
     display:grid;
     grid-template-columns: 10% 20% 6% 28% 6% 20% 10%;
@@ -93,7 +98,7 @@ body {
                 z-index : 4;
                 text-align: center;
                 justify-content: space-around;
-                cursor: pointer;
+                .monkey{cursor:pointer}
                 #hAutoclick{
                     margin-top : 2vh;
                     color: yellow;
