--- a/scss/style.scss
+++ b/scss/style.scss
@@ -201,7 +201,7 @@ body {
 /* Police d'écriture */
 @font-face {
         font-family: "waltographUI";
-        src: url("../font/waltographUI.ttf") format("truetype");
+        src: url("../public/fonts/waltographUI.ttf") format("truetype");
     }
 
     h1 {
@@ -216,7 +216,7 @@ body {
 
 @font-face {
         font-family: "Westmeath";
-        src: url("../font/Good Choice.ttf") format("truetype");
+        src: url("../public/fonts/AlphaFridgeMagnetsAllCaps.ttf") format("truetype");
     }
 
     #hScore {
@@ -224,5 +224,18 @@ body {
         font-size : 30px ; 
         color : white ; 
         font-family: "Westmeath",arial,sans-serif;
-        font-family: 'Acme', sans-serif;
+       
+    }
+
+    @font-face {
+        font-family: "Westmeath0";
+        src: url("../public/fonts/AlphaFridgeMagnetsAllCaps.ttf") format("truetype");
+    }
+
+    #hPerSecond {
+        text-align: center;
+        font-size : 20px ; 
+        color : white ; 
+        font-family: "Westmeath0",arial,sans-serif;
+       
     }
