--- a/css/style.css
+++ b/css/style.css
@@ -166,8 +166,9 @@ table {
   border-radius: 50%;
   position: relative;
   top: -0.9em;
-  left: 6.6em;
+  left: 11.6em;
   transform: scale(2);
+  cursor: pointer;
 }
 
 .banana:before {
@@ -177,7 +178,7 @@ table {
   transform: rotate(45deg);
   background-color: #937714;
   position: absolute;
-  top: 5.1em;
+  top: 5.2em;
   left: 4.5em;
   z-index: 10;
 }
@@ -202,8 +203,9 @@ table {
   border-radius: 50%;
   position: relative;
   top: -6.4em;
-  left: 6.5em;
+  left: 11.5em;
   transform: scale(2) rotate(-4deg);
+  cursor: pointer;
 }
 
 .bananaMult {
