--- a/scss/_banana.scss
+++ b/scss/_banana.scss
@@ -6,8 +6,9 @@
     border-radius: 50%;
     position: relative;
     top: -0.9em;
-    left: 6.6em;
+    left: 11.6em;
     transform: scale(2);
+    cursor: pointer;
   }
   
 .banana:before {
@@ -17,7 +18,7 @@ height: 0.3em;
 transform: rotate(45deg);
 background-color: #937714;
 position: absolute;
-top: 5.1em;
+top: 5.2em;
 left: 4.5em;
 z-index:10;
 }
@@ -42,6 +43,7 @@ box-shadow: -0.4em 0.4em 0 0 #ffe23c;
 border-radius: 50%;
 position: relative;
 top: -6.4em;
-left: 6.5em;
+left: 11.5em;
 transform: scale(2) rotate(-4deg);
+cursor: pointer;
 }
