page width fixed

--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,8 @@ body {
 #page {
   display: grid;
   grid-template-columns: 10% 20% 6% 28% 6% 20% 10%;
+  width: 1500px;
+  margin: auto;
 }
 #page .leftColumn {
   display: flex;
@@ -429,6 +431,7 @@ body {
   z-index: 4;
   text-align: center;
   vertical-align: middle;
+  color: yellow;
 }
 #page .leftColumn .mult #bananaGrappe {
   position: absolute;
