--- a/css/style.css
+++ b/css/style.css
@@ -490,7 +490,6 @@ body {
 }
 #page .rightColumn .autoplank .auto1Txt #hAutoclick {
   margin-top: 2vh;
-  color: yellow;
 }
 
 .reset {
@@ -525,7 +524,6 @@ body {
   left: 20px;
   z-index: 41;
   transform: rotate(-2deg) translate(8%, -5%);
-  color: yellow;
 }
 
 .rope {
@@ -691,7 +689,7 @@ body {
   font-family: "waltographUI";
   src: url("../public/fonts/waltographUI.ttf") format("truetype");
 }
-h1 {
+#TitleFont, h1 {
   z-index: 25;
   text-align: center;
   font-family: "waltographUI", arial, sans-serif;
@@ -706,9 +704,10 @@ h1 {
 }
 #hScore {
   text-align: center;
-  font-size: 30px;
-  color: white;
+  font-size: 35px;
+  color: #eae4cc;
   font-family: "Westmeath", arial, sans-serif;
+  text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
 }
 
 @font-face {
@@ -717,9 +716,36 @@ h1 {
 }
 #hPerSecond {
   text-align: center;
-  font-size: 20px;
-  color: white;
+  font-size: 23px;
+  color: #eae4cc;
   font-family: "Westmeath0", arial, sans-serif;
+  text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
 }
+
+@font-face {
+  font-family: "Westmeath1";
+  src: url("../public/fonts/AlphaFridgeMagnetsAllCaps.ttf") format("truetype");
+}
+#hReset {
+  text-align: center;
+  color: #eae4cc;
+  font-size: 23px;
+  font-family: "Westmeath1", arial, sans-serif;
+  text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
+}
+
+@font-face {
+  font-family: "Westmeath2";
+  src: url("../public/fonts/AlphaFridgeMagnetsAllCaps.ttf") format("truetype");
+}
+#hAutoclick {
+  text-align: center;
+  color: #eae4cc;
+  font-size: 29px;
+  font-family: "Westmeath2", arial, sans-serif;
+  text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
+}
+
+/*police d'écriture */
 
 /*# sourceMappingURL=style.css.map */
