--- a/css/style.css
+++ b/css/style.css
@@ -150,12 +150,12 @@ table {
 
 .big {
   width: 100%;
-  height: 600px;
+  height: 630px;
 }
 
 .small {
   width: 100%;
-  height: 250px;
+  height: 280px;
 }
 
 .banana {
@@ -413,10 +413,12 @@ body {
 #page {
   display: grid;
   grid-template-columns: 10% 20% 6% 28% 6% 20% 10%;
-  width: 1500px;
+  width: 1600px;
+  height: 800px;
   margin: auto;
 }
 #page .leftColumn {
+  height: 800px;
   display: flex;
   flex-direction: column;
   grid-column: 2/span 1;
@@ -480,6 +482,10 @@ body {
   display: flex;
   flex-direction: column;
   grid-column: 6/span 1;
+  height: 800px;
+}
+#page .rightColumn .autoplank {
+  height: 630px;
 }
 #page .rightColumn .autoplank .auto1Txt {
   position: relative;
@@ -508,7 +514,13 @@ body {
   cursor: pointer;
 }
 .reset .rope {
-  height: 4vh;
+  height: 30px;
+}
+.reset .rope .leftRope {
+  height: 30px;
+}
+.reset .rope .rightRope {
+  height: 30px;
 }
 .reset .plankReset {
   width: 150px;
@@ -534,19 +546,19 @@ body {
 }
 
 .rope {
-  height: 8vh;
+  height: 80px;
   display: flex;
   justify-content: space-around;
 }
 
 .leftRope {
-  height: 8vh;
+  height: 80px;
   width: 3px;
   background-image: repeating-linear-gradient(-40deg, black 0%, black 5%, #523106 5%, #a05b0d 10%);
 }
 
 .rightRope {
-  height: 8vh;
+  height: 80px;
   width: 3px;
   background-image: repeating-linear-gradient(-40deg, black 0%, black 5%, #523106 5%, #9c590c 10%);
 }
