--- a/css/style.css
+++ b/css/style.css
@@ -411,6 +411,7 @@ body {
 }
 
 #page {
+  overflow: auto;
   display: grid;
   grid-template-columns: 10% 20% 6% 28% 6% 20% 10%;
   width: 1600px;
@@ -477,6 +478,13 @@ body {
 }
 #page .centralColumn h1 {
   color: yellow;
+  position: fixed;
+  top: 15vh;
+  width: 448px;
+}
+#page .centralColumn #hClick {
+  position: fixed;
+  top: 60vh;
 }
 #page .rightColumn {
   display: flex;
