--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,9 @@
 @import 'plank.scss';
 @import 'banana.scss';
 @import 'bananaMult.scss';
+@import 'bonus.scss';
 @import 'monkey.scss';
+
 
 html {
     min-height: 100%;
