--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,8 +21,11 @@ body {
 }
 #page{
     overflow: auto;
-    @media only screen and (max-width: 950px){
+    @media only screen and (max-height: 950px){
         overflow-y: scroll;
+    }
+    @media only screen and (max-width: 1600){
+        overflow-x: scroll;
     }
     display:grid;
     grid-template-columns: 10% 20% 6% 28% 6% 20% 10%;
