--- a/css/style.css
+++ b/css/style.css
@@ -490,7 +490,7 @@ body {
   height: 800px;
   margin: auto;
 }
-@media only screen and (max-width: 950px) {
+@media only screen and (max-height: 950px) {
   #page {
     overflow-y: scroll;
   }
@@ -501,13 +501,16 @@ body {
   flex-direction: column;
   grid-column: 2/span 1;
 }
+#page .leftColumn .infos {
+  height: 290px;
+}
 #page .leftColumn .infos .infoTxt {
-  position: absolute;
-  top: 20%;
-  width: 20%;
+  position: relative;
+  top: -190px;
+  width: 330px;
   z-index: 4;
   text-align: center;
-  vertical-align: middle;
+  line-height: 40px;
   color: yellow;
 }
 #page .leftColumn .mult .multTxt {
@@ -548,9 +551,6 @@ body {
   transform: rotate(45deg);
 }
 #page .centralColumn {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   grid-column: 4/span 1;
 }
 #page .centralColumn h1 {
