--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,9 +26,6 @@ body {
     @media only screen and (max-height: 950px){
         overflow-y: scroll;
     }
-    @media only screen and (max-width: 1600){
-        overflow-x: scroll;
-    }
     display:grid;
     grid-template-columns: 10% 20% 6% 28% 6% 20% 10%;
     width: 1600px;
@@ -40,13 +37,14 @@ body {
         flex-direction:column;
         grid-column : 2 / span 1;
         .infos{
+            height: 290px;
             .infoTxt{
-                position : absolute;
-                top : 20%;
-                width : 20%;
+                position : relative;
+                top : -190px;
+                width : 330px;
                 z-index : 4;
                 text-align: center;
-                vertical-align: middle;
+                line-height: 40px;
                 color : yellow;
             }
         }
@@ -91,9 +89,6 @@ body {
         }
     }
     .centralColumn{
-        display: flex;
-        flex-direction:column;
-        justify-content: space-around;
         grid-column : 4 / span 1;
         h1{
             color : yellow;
