--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,7 +52,7 @@ body {
             height: 290px;
             .multTxt{
                 position : relative;
-                top : -20px;
+                top : -100px;
                 width : 330px;
                 z-index : 4;
                 text-align: center;
@@ -60,13 +60,15 @@ body {
                 color: yellow;
             }
             #bananaGrappe{
+                cursor: pointer;
                 position: relative;
                 width: 130px;
                 height: 110px;
-                top: -230px;
-                left: 95px;
+                top: -250px;
+                left: 100px;
                 .multBanana3{
                     position: absolute;
+                    height: 110px;
                     top: 2%;
                     left: 21%;
                     z-index: 4;
@@ -74,15 +76,17 @@ body {
                 }
                 .multBanana2{
                     position: absolute;
-                    top: -4%;
-                    left: 0%;
+                    height: 110px;
+                    top: 0%;
+                    left: 8%;
                     z-index: 4;
                     transform: rotate(30deg);
                 }
                 .multBanana1{
                     position: absolute;
-                    top: -10%;
-                    left: -18%;
+                    height: 110px;
+                    top: -4%;
+                    left: -5%;
                     z-index: 4;
                     transform: rotate(45deg);
                 }
@@ -346,8 +350,14 @@ body {
             font-size : 35px ; 
             color : #eae4cc ; 
             font-family: "Westmeath",arial,sans-serif;
-            text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
+            // text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
         
+        }
+        #hMultiplier {
+            text-align: center;
+            font-size : 35px ; 
+            color : #eae4cc ; 
+            font-family: "Westmeath",arial,sans-serif;
         }
 
         @font-face {
@@ -360,7 +370,7 @@ body {
             font-size : 23px ; 
             color : #eae4cc ; 
             font-family: "Westmeath0",arial,sans-serif;
-            text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
+            // text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
         
         }
         @font-face {
@@ -373,7 +383,7 @@ body {
             color : #eae4cc ; 
             font-size : 23px ; 
             font-family: "Westmeath1",arial,sans-serif;
-            text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
+            // text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
         
         }
 
@@ -387,7 +397,7 @@ body {
             color : #eae4cc ; 
             font-size : 29px ; 
             font-family: "Westmeath2",arial,sans-serif;
-            text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
+            // text-shadow: 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61, 0 0 2px #d61;
         
         }
 
