--- a/scss/_banana.scss
+++ b/scss/_banana.scss
@@ -5,8 +5,8 @@
     box-shadow: -1.1em 1.1em 0 0 #fcd110;
     border-radius: 50%;
     position: relative;
-    top: -2.9em;
-    left: 11.6em;
+    top: 14px;
+    left: 5.6em;
     transform: scale(2);
     cursor: pointer;
   }
@@ -42,8 +42,8 @@ background-color: transparent;
 box-shadow: -0.4em 0.4em 0 0 #ffe23c;
 border-radius: 50%;
 position: relative;
-top: -8.4em;
-left: 11.5em;
+top: -74px;
+left: 88px;
 transform: scale(2) rotate(-4deg);
 cursor: pointer;
 }
