--- a/css/style.css
+++ b/css/style.css
@@ -165,8 +165,8 @@ table {
   box-shadow: -1.1em 1.1em 0 0 #fcd110;
   border-radius: 50%;
   position: relative;
-  top: -2.9em;
-  left: 11.6em;
+  top: 14px;
+  left: 5.6em;
   transform: scale(2);
   cursor: pointer;
 }
@@ -202,8 +202,8 @@ table {
   box-shadow: -0.4em 0.4em 0 0 #ffe23c;
   border-radius: 50%;
   position: relative;
-  top: -8.4em;
-  left: 11.5em;
+  top: -74px;
+  left: 88px;
   transform: scale(2) rotate(-4deg);
   cursor: pointer;
 }
@@ -404,6 +404,7 @@ body {
   background: #2c2836;
   background: radial-gradient(circle, #2c2836 5%, #2e2b3c 25%, #33394e 70%, #2e5d5f 86%);
   overflow: hidden;
+  min-width: 1600px;
 }
 
 #page {
@@ -492,7 +493,11 @@ body {
 }
 #page .centralColumn #hClick {
   position: fixed;
-  top: 60vh;
+  top: 50vh;
+  width: 200px;
+  height: 200px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 #page .rightColumn {
   display: flex;
@@ -554,7 +559,7 @@ body {
 .reset #hReset {
   position: absolute;
   top: 35px;
-  left: 20px;
+  left: 13px;
   z-index: 41;
   transform: rotate(-2deg) translate(8%, -5%);
 }
