--- a/scss/style.scss
+++ b/scss/style.scss
@@ -102,6 +102,7 @@ body {
         }
         #hClick{
             position: fixed;
+            cursor: pointer;
             top: 50vh;
             width: 200px;
             height: 200px;
