--- a/scss/_bonus.scss
+++ b/scss/_bonus.scss
@@ -54,13 +54,13 @@
     animation:spin 4s linear infinite;
 }
 
-@keyframes spin { 
-    from { 
-        transform: rotate(0deg); 
-    } to { 
-        transform: rotate(360deg); 
-    }
-}
+// @keyframes spin { 
+//     from { 
+//         transform: rotate(0deg); 
+//     } to { 
+//         transform: rotate(360deg); 
+//     }
+// }
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
