--- a/scss/_bonus.scss
+++ b/scss/_bonus.scss
@@ -5,10 +5,9 @@
     box-shadow: -1.1em 1.1em 0 0 #ad4c38;
     border-radius: 50%;
     position: relative;
-    top: -7.9em;
-    left: 11.6em;
+    top: 16px;
+    left: 89px;
     transform: scale(2);
-    cursor: pointer;
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
@@ -45,10 +44,9 @@
     box-shadow: -0.4em 0.4em 0 0 #dc6f59;
     border-radius: 50%;
     position: relative;
-    top: -13.4em;
-    left: 11.5em;
+    top: -75px;
+    left: 89px;
     transform: scale(2) rotate(-4deg);
-    cursor: pointer;
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
