banan pos fixed

--- a/css/style.css
+++ b/css/style.css
@@ -567,8 +567,7 @@ body {
   top: 50vh;
   width: 200px;
   height: 200px;
-  left: 800px;
-  transform: translateX(-50%);
+  margin-left: 124px;
 }
 #page .centralColumn #hBonus {
   position: fixed;
