--- a/css/style.css
+++ b/css/style.css
@@ -573,7 +573,7 @@ body {
   top: 46vh;
   width: 200px;
   height: 200px;
-  left: 738px;
+  margin-left: 163px;
 }
 #page .rightColumn {
   display: flex;
