--- a/scss/style.scss
+++ b/scss/style.scss
@@ -114,7 +114,7 @@ body {
             top: 46vh;
             width: 200px;
             height: 200px;
-            left: 738px;
+            margin-left : 163px;
         }
     }
     .rightColumn{
@@ -135,7 +135,6 @@ body {
                 .monkey{cursor:pointer}
                 #hAutoclick{
                     margin-top : 2vh;
-                   
                 }
             }
         }
